# HismithControl

./: CMakeLists.txt  DataTypes.h  MyClosedFigure.cpp  MyClosedFigure.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.xml
data/: data.xml  speed_statistics_data_1.txt  speed_statistics_data_10.txt  speed_statistics_data_100.txt  speed_statistics_data_11.txt  speed_statistics_data_12.txt  speed_statistics_data_13.txt  speed_statistics_data_14.txt  speed_statistics_data_15.txt  speed_statistics_data_16.txt  speed_statistics_data_17.txt  speed_statistics_data_18.txt  speed_statistics_data_19.txt  speed_statistics_data_2.txt  speed_statistics_data_20.txt  speed_statistics_data_21.txt  speed_statistics_data_22.txt  speed_statistics_data_23.txt  speed_statistics_data_24.txt  speed_statistics_data_25.txt  speed_statistics_data_26.txt  speed_statistics_data_27.txt  speed_statistics_data_28.txt  speed_statistics_data_29.txt  speed_statistics_data_3.txt  speed_statistics_data_30.txt  speed_statistics_data_31.txt  speed_statistics_data_32.txt  speed_statistics_data_33.txt  speed_statistics_data_34.txt  speed_statistics_data_35.txt  speed_statistics_data_36.txt  speed_statistics_data_37.txt  speed_statistics_data_38.txt  speed_statistics_data_39.txt  speed_statistics_data_4.txt  speed_statistics_data_40.txt  speed_statistics_data_41.txt  speed_statistics_data_42.txt  speed_statistics_data_43.txt  (+61 more)
